# atividade_introducao

./: README.md  atividade_avg.ipynb  relatorio.ipynb
apresentacao_pacotesoma/: apresentacao_pacotes_v2.ipynb
apresentacao_pacotesoma/PacoteSoma/: README.md  pyproject.toml  setup.cfg  setup.py
apresentacao_pacotesoma/PacoteSoma/pacotesoma/: __init__.py  pacotesoma.py
apresentacao_pacotesoma/PacoteSoma/pacotesoma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apresentacao_pacotesoma/PacoteSoma/tests/: test_soma.py
atividade/download_tifs/: analise_espacial_eventos_aq1km.ipynb  sobreposicao_refatorado.ipynb
smosaic/: conda-environment.txt  setup.py
smosaic/smosaic/: ProgGeo_Project-EXEMPLE.ipynb  cli.py  relatorio.ipynb  smosaic_count_pixels.py  smosaic_fix_baseline_number.py  smosaic_grid_crop.py  smosaic_merge_scene.py  smosaic_merge_tifs.py  smosaic_mosaic.py  smosaic_new_methods.py  smosaic_spectral_indices.py  smosaic_utils.py
smosaic/smosaic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
smosaic/smosaic/tests/: test_clip_raster.py  test_count_pixels.py  test_e2e_avg.py  test_e2e_max.py  test_e2e_maxx.py  test_e2e_old_methods.py  test_fix_baseline_number.py  test_generate_cog.py  test_merge_tifs.py  test_new_methods.py  test_spectral_indices.py  test_utils.py
