[metadata]
name = pacotesoma
version = 0.1.0
description = Pacote simples para somar dois números
long_description = file: README.md
long_description_content_type = text/markdown
author = Seu Nome
author_email = seu.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude =
    tests
    tests.*
